# starting-ragchatbot-codebase

./: CLAUDE.local.md  CLAUDE.md  frontend-changes.md  pyproject.toml  system_flow_diagram.md
backend/: ai_generator.py  app.py  document_processor.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system.py
frontend/: index.html  script.js  style.css
scripts/: format.py  quality.py
